--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -2,9 +2,9 @@
 
 $section-padding: 40px 0;
 
-section.intro, section.features-extra, section.rsvp {
+section.intro, section.wedding, section.travel {
 	background: $section-light;
 }
-section.features, section.events, section.blog {
+section.eng-pics, section.events, section.gifts {
 	background: $section-dark;
 }
