a couple more text layout tweaks

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -2,7 +2,7 @@
 
 $section-padding: 40px 0;
 
-section.intro, section.wedding, section.travel {
+section.intro, section.wedding, section.travel, section.faq {
 	background: $section-light;
 }
 section.eng-pics, section.events, section.gifts {
