--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -560,7 +560,7 @@ Embed video
 /* ==========================================================================
 RSVP form
 ========================================================================== */
-.rsvp {
+.faq {
   padding-bottom: 140px;
 }
 
