fixed styles for FAQ

--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -18,7 +18,7 @@ $bold: 700;
 
 $font-size-h1: 60px;
 $font-size-h2: 40px;
-$font-size-h3: 24px;
+$font-size-h3: 22px;
 $font-size-h4: 18px;
 $font-size-h5: 15px;
 $font-size-p: 15px;
@@ -57,15 +57,17 @@ h2 {
 
 h3 {
   color: $h3-color;
-  font-size: $font-size-h4;
-  font-weight: $bold;
-  text-transform: uppercase;
+  font-size: $font-size-h3;
   letter-spacing: 3px;
   line-height: $base-line-height;
+  padding-bottom: 5px;
 }
 
 h4 {
+  color: $h3-color;
   font-size: $font-size-h4;
+  line-height: $base-line-height;
+  padding-bottom: 2px;
 }
 
 h5 {
