--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -625,5 +625,7 @@ body.modal-open {
 .b-list {
   li {
     list-style: disc inside none;
+    margin: 8px 0px 8px 8px;
   }
+  margin: 15px 0px 15px 10px;
 }
