--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -627,5 +627,6 @@ body.modal-open {
     list-style: disc inside none;
     margin: 8px 0px 8px 8px;
   }
+  text-align: left;
   margin: 15px 0px 15px 10px;
 }
